# NnennaAI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFESTO.md  Makefile  README.md  pyproject.toml  setup.sh
cli/: __init__.py  main.py  utils.py
cli/commands/: __init__.py  assess.py  config.py  dashboard.py  ingest.py  init.py  run.py  scan.py  score.py
cli/context/: context_docs.py
decisions/: 0000-template.md  0001-cli-language.md
docs/: architecture.md  cli.md  config.md  evaluations.md  modules.md  overview.md  pipeline.md  quickstart.md
modules/: __init__.py  base.py  config.py  run_engine.py
modules/embedders/: __init__.py  openai.py
modules/evaluators/: __init__.py  ragas.py
modules/generators/: __init__.py  openai.py
modules/retrievers/: __init__.py  chroma.py
tests/: test_cli.py
